firmware/defmt-test/macros/tests/ui/teardown-duplicate.stderr
error: only a single `#[teardown]` function can be defined
 --> tests/ui/teardown-duplicate.rs:9:8
  |
9 |     fn second() {}
  |        ^^^^^^
