firmware/defmt-test/macros/tests/ui/teardown-duplicate.rs
fn main() {}

#[defmt_test_macros::tests]
mod tests {
    #[teardown]
    fn first() {}

    #[teardown]
    fn second() {}
}
